--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           </div>
         </div>
       </nav>
+
       <section class="container mt-5">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -103,6 +104,34 @@
           </div>
       </section>
    </header>
+   <main>
+    <section>
+        <div class="container overflow-hidden text-center my-5">
+            <div class="row gy-5">
+              <div class=" col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-warning d-flex align-items-center justify-content-around"> 
+                  <h1 class="text-white">Watch</h1>
+                  <img src="images/categories/watch.png" alt="">
+                </div>
+              </div>
+              <div class=" col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-success d-flex align-items-center justify-content-around"> 
+                  <h1 class="text-white">Bags</h1>
+                  <img src="images/categories/bag.png" alt="">
+                </div>
+              </div>
+              <div class=" col-lg-4 col-md-6 col-sm-12">
+                <div class="p-3 border bg-info d-flex align-items-center justify-content-around"> 
+                  <h1 class="text-white">Shoes</h1>
+                  <img src="images/categories/shoes.png" alt="">
+                </div>
+              </div>
+               
+              
+            </div>
+          </div>
+    </section>
+   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
