--- a/index.html
+++ b/index.html
@@ -177,6 +177,52 @@
           </div>
     </section>
     <!-- shoes section end -->
+    <!-- bag  section start  -->
+    <section class="container ">
+        <h2>Bagpack</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5">
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class=" card-title">Red laltu Bag</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <h2 class="m-3">$300</h2>
+                <div class=" m-3">
+                    <div class="btn btn-warning">Buy Now</div>
+               </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"> Nil naltu Bag </h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <h2 class="m-3">$400</h2>
+                <div class=" m-3">
+                    <div class="btn btn-warning">Buy Now</div>
+               </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"> Black Panther</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <h2 class="m-3">$500</h2>
+                <div class=" m-3">
+                     <div class="btn btn-warning">Buy Now</div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- bag  section end  -->
    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
