--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <header>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar  fixed-top navbar-expand-lg bg-light">
         <div class="container">
           <a class="navbar-brand" href="#"> 
             <img src="images/logo.png" alt="">
@@ -22,10 +22,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Bagpack</a>
+                <a class="nav-link" href="#bag">Bagpack</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Subscriber</a>
@@ -132,9 +132,9 @@
           </div>
     </section>
     <!-- shoes section start -->
-    <section class="container ">
+    <section class="container " id="shoes">
         <h2>Shoes</h2>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5 ">
             <div class="col">
               <div class="card border border-0 shadow-lg h-100">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -178,14 +178,14 @@
     </section>
     <!-- shoes section end -->
     <!-- bag  section start  -->
-    <section class="container ">
+    <section class="container " id="bag">
         <h2>Bagpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mb-5">
             <div class="col">
               <div class="card border border-0 shadow-lg h-100">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class=" card-title">Red laltu Bag</h5>
+                  <h5 class=" card-title">Red Laltu Bag</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <h2 class="m-3">$300</h2>
@@ -198,7 +198,7 @@
               <div class="card border border-0 shadow-lg h-100">
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title"> Nil naltu Bag </h5>
+                  <h5 class="card-title"> Nil Naltu Bag </h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <h2 class="m-3">$400</h2>
