--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
    <header>
@@ -38,10 +39,10 @@
         </div>
       </nav>
 
-      <section class="container mt-5">
+      <section class="container mt-5 ">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active bg-info p-5 rounded " data-bs-interval="10000">
+              <div class="carousel-item active   p-5 rounded  panda-bg-info" data-bs-interval="10000">
  <div class="row">
     <div class="col-lg-7 d-flex align-items-center ">
         <div>
@@ -58,7 +59,7 @@
     </div>
  </div>
               </div>
-              <div class="carousel-item active bg-info p-5 rounded " data-bs-interval="2000">
+              <div class="carousel-item active panda-bg-info p-5 rounded " data-bs-interval="2000">
                 <div class="row">
                     <div class="col-lg-7 d-flex align-items-center ">
                         <div>
@@ -75,7 +76,7 @@
                     </div>
                  </div>
               </div>
-              <div class="carousel-item active bg-info p-5 rounded">
+              <div class="carousel-item active panda-bg-info p-5 rounded">
                 <div class="row">
                     <div class="col-lg-7 d-flex align-items-center ">
                         <div>
@@ -109,19 +110,19 @@
         <div class="container overflow-hidden text-center my-5">
             <div class="row gy-5">
               <div class=" col-lg-4 col-md-6 col-sm-12">
-                <div class="p-3 border bg-warning d-flex align-items-center justify-content-around"> 
+                <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around"> 
                   <h1 class="text-white">Watch</h1>
                   <img src="images/categories/watch.png" alt="">
                 </div>
               </div>
               <div class=" col-lg-4 col-md-6 col-sm-12">
-                <div class="p-3 border bg-success d-flex align-items-center justify-content-around"> 
+                <div class="p-3 rounded bg-success d-flex align-items-center justify-content-around"> 
                   <h1 class="text-white">Bags</h1>
                   <img src="images/categories/bag.png" alt="">
                 </div>
               </div>
               <div class=" col-lg-4 col-md-6 col-sm-12">
-                <div class="p-3 border bg-info d-flex align-items-center justify-content-around"> 
+                <div class="p-3 rounded bg-info d-flex align-items-center justify-content-around"> 
                   <h1 class="text-white">Shoes</h1>
                   <img src="images/categories/shoes.png" alt="">
                 </div>
@@ -224,7 +225,7 @@
     </section>
     <!-- bag  section end  -->
     <!-- submit subscrive start -->
-    <section style="height: 300px;" class="container d-flex justify-content-center align-items-center bg-info" id="subscrive">
+    <section style="height: 300px;" class="container d-flex justify-content-center align-items-center panda-bg-info" id="subscrive">
      
      <div>
         <h2>LET'S STAY IN TOUCH</h2>
